--- a/index.html
+++ b/index.html
@@ -16,14 +16,30 @@
             <div id="box">
             <div id="slider">
                 <ul>
-                    <li>0</li>
-                    <li>1</li>
-                    <li>2</li>
-                    <li>3</li>
-                    <li>4</li>
-                    <li>5</li>
-                    <li>6</li>
-                    <li>7</li>
+                    <li>
+                        <img src="img/unnamed.jpg" alt="img"/>
+                    </li>
+                    <li>
+                        <img src="img/unnamed1.jpg" alt="img"/>
+                    </li>
+                    <li>
+                        <img src="img/unnamed2.jpg" alt="img"/>
+                    </li>
+                    <li>
+                        <img src="img/unnamed3.jpg" alt="img"/>
+                    </li>
+                    <li>
+                        <img src="img/unnamed4.jpg" alt="img"/>
+                    </li>
+                    <li>
+                        <img src="img/unnamed5.jpg" alt="img"/>
+                    </li>
+                    <li>
+                        <img src="img/unnamed6.jpg" alt="img"/>
+                    </li>
+                    <li>
+                        <img src="img/unnamed7.jpg" alt="img"/>
+                    </li>
                 </ul>
             </div>
             </div>
@@ -32,14 +48,30 @@
             <div id="box">
             <div id="slider2">
                 <ul>
-                    <li>0</li>
-                    <li>1</li>
-                    <li>2</li>
-                    <li>3</li>
-                    <li>4</li>
-                    <li>5</li>
-                    <li>6</li>
-                    <li>7</li>
+                    <li>
+                        <img src="img/unnamed.jpg" alt="img"/>
+                    </li>
+                    <li>
+                        <img src="img/unnamed1.jpg" alt="img"/>
+                    </li>
+                    <li>
+                        <img src="img/unnamed2.jpg" alt="img"/>
+                    </li>
+                    <li>
+                        <img src="img/unnamed3.jpg" alt="img"/>
+                    </li>
+                    <li>
+                        <img src="img/unnamed4.jpg" alt="img"/>
+                    </li>
+                    <li>
+                        <img src="img/unnamed5.jpg" alt="img"/>
+                    </li>
+                    <li>
+                        <img src="img/unnamed6.jpg" alt="img"/>
+                    </li>
+                    <li>
+                        <img src="img/unnamed7.jpg" alt="img"/>
+                    </li>
                 </ul>
             </div>
             </div>
